syntax = "proto3";
package proto;

import "google/protobuf/timestamp.proto";

service Magic {
    rpc GetWaitTimes(GetWaitTimesRequest) returns (GetWaitTimesResponse);
    rpc GetWaitHistory(GetWaitHistoryRequest) returns (GetWaitTimesResponse);
    rpc GetAttractions(GetAttractionsRequest) returns (GetAttractionsResponse);
}

message GetWaitTimesRequest {
    string park_id = 2;
}

message GetWaitHistoryRequest {
    string attraction_id = 1;
}

message GetWaitTimesResponse {
    repeated WaitTime wait_time = 1;
}

message WaitTime {
    string park_id = 1;
    string attraction_id = 2;
    int32 wait_time = 3;
    google.protobuf.Timestamp last_updated = 4;
}

message GetAttractionsRequest {
    string park_id = 1;
}

message GetAttractionsResponse {
    repeated Attraction attraction = 1;
}

message Attraction {
    string id = 1;
    string name = 2;
}